fixing animation mobile

--- a/src/output.css
+++ b/src/output.css
@@ -632,6 +632,10 @@ video {
   z-index: 1;
 }
 
+.-z-20 {
+  z-index: -20;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -696,6 +700,18 @@ video {
 
 .mt-8 {
   margin-top: 2rem;
+}
+
+.-mt-32 {
+  margin-top: -8rem;
+}
+
+.-mt-44 {
+  margin-top: -11rem;
+}
+
+.-mt-24 {
+  margin-top: -6rem;
 }
 
 .block {
@@ -981,6 +997,11 @@ video {
   line-height: 2.5rem;
 }
 
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
@@ -999,16 +1020,6 @@ video {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
-}
-
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
 }
 
 .font-bold {
@@ -1162,9 +1173,31 @@ body {
   .sm\:pt-32 {
     padding-top: 8rem;
   }
+
+  .sm\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .sm\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
 }
 
 @media (min-width: 768px) {
+  .md\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .md\:-mt-24 {
+    margin-top: -6rem;
+  }
+
+  .md\:-mt-12 {
+    margin-top: -3rem;
+  }
+
   .md\:block {
     display: block;
   }
@@ -1183,6 +1216,16 @@ body {
 
   .md\:pt-36 {
     padding-top: 9rem;
+  }
+
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .md\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
 
   .md\:text-lg {
@@ -1214,6 +1257,14 @@ body {
 
   .lg\:mt-4 {
     margin-top: 1rem;
+  }
+
+  .lg\:-mt-32 {
+    margin-top: -8rem;
+  }
+
+  .lg\:-mt-12 {
+    margin-top: -3rem;
   }
 
   .lg\:block {
@@ -1297,16 +1348,6 @@ body {
 
   .lg\:pt-52 {
     padding-top: 13rem;
-  }
-
-  .lg\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
-
-  .lg\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
   }
 
   .lg\:text-6xl {
